welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
    def hunt(c:Color) {
            do{
    if(isFacingTrail(Color.red)){avance();baisseBrosse();leveBrosse();}else{droite();}
    if(estSurBiscuit){prendBiscuit();}
    }while (porteBiscuit==false)
    }
   
    def isFacingTrail():Boolean = {
var Couleur = false
if (!estFaceMur){
	avance();
	getCouleurSol()
	match{ case Color.green => Couleur = true
	case _ => Couleur = false
	}
	recule();
}

return Couleur;
}        


